# app/Models/Translation.php
@@ -2,31 +2,14 @@
 
 namespace App\Models;
 
+use App\Filters\TranslationFilter;
 use Illuminate\Database\Eloquent\Builder;
+use Illuminate\Http\Request;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Support\Facades\Auth;
-use App\Filters\WordFilter;
-use Illuminate\Http\Request;
 
-/**
- * @OA\Schema(
- *    title="Word",
- *    description="Word model",
- *    @OA\Xml(
- *      name="Word"
- *    ),
- *    @OA\Property(
- *      property="name",
- *      type="string"
- *    ),
- *    @OA\Property(
- *      property="language_id",
- *      type="integer"
- *    )
- * )
- */
-class Word extends Model
+class Translation extends Model
 {
     use HasFactory;
 
@@ -36,17 +19,30 @@ class Word extends Model
      * @var array
      */
     protected $fillable = [
-        'name', 'user_id', 'language_id'
+        'user_id', 'word_origin_id', 'word_translation_id'
     ];
+
+    /**
+     * The relationships that should always be loaded.
+     *
+     * @var array
+     */
+    protected $with = ['wordOrigin', 'wordTranslation'];
+
 
     public function user()
     {
       return $this->belongsTo(User::class);
     }
 
-    public function language()
+    public function wordOrigin()
     {
-      return $this->belongsTo(Language::class);
+      return $this->belongsTo(Word::class, 'word_origin_id');
+    }
+
+    public function wordTranslation()
+    {
+      return $this->belongsTo(Word::class, 'word_translation_id');
     }
 
     public function scopeWhereCurrentUser($query)
@@ -56,6 +52,7 @@ class Word extends Model
 
     public function scopeFilter(Builder $builder, Request $request)
     {
-        return (new WordFilter($request))->filter($builder);
+        return (new TranslationFilter($request))->filter($builder);
     }
+
 }
